--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,9 @@ repositories {
 }
 
 dependencies {
-
     compile 'com.lynden:GMapsFX:2.12.0'
-
+    compile 'org.kordamp.bootstrapfx:bootstrapfx-core:0.2.3'
+    compile 'eu.hansolo:Medusa:8.0'
 }
 
 apply plugin: 'javafx-gradle-plugin'
