--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     compile 'com.lynden:GMapsFX:2.12.0'
     compile 'org.kordamp.bootstrapfx:bootstrapfx-core:0.2.3'
     compile 'eu.hansolo:Medusa:8.0'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.0.2.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '2.0.2.RELEASE'
+    compile group: 'org.springframework', name: 'spring-messaging', version: '5.0.6.RELEASE'
 }
 
 apply plugin: 'javafx-gradle-plugin'
